<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/day"
        tools:context=".view.FirstScreen">


        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/weather_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </androidx.appcompat.widget.SearchView>

        <androidx.cardview.widget.CardView
            android:id="@+id/weather_card"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="250dp"
            android:contentDescription="@string/description"
            android:padding="50dp"
            app:cardBackgroundColor="#80FFFFFF"
            app:cardCornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            app:layout_constraintVertical_bias="0.3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:contentDescription="@string/description"
                android:src="@drawable/_113">


            </ImageView>

            <TextView
                android:id="@+id/degree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="30dp"
                android:text="@string/test"
                android:textSize="90sp" />
        </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_card"
            app:layout_constraintVertical_bias="1.0">

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="20dp"
                app:cardBackgroundColor="#40FFFFFF"
                app:cardCornerRadius="15dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/humidity"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp">

                </com.google.android.material.textview.MaterialTextView>

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="match_parent"
                    android:layout_height="103dp"
                    android:layout_marginVertical="40dp">

                </TextView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="20dp"
                app:cardBackgroundColor="#40FFFFFF"
                app:cardCornerRadius="15dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/feels"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp">

                </com.google.android.material.textview.MaterialTextView>

                <TextView
                    android:id="@+id/feels_like"
                    android:layout_width="match_parent"
                    android:layout_height="103dp"
                    android:layout_marginVertical="40dp">

                </TextView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="20dp"
                app:cardBackgroundColor="#40FFFFFF"
                app:cardCornerRadius="15dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/wind"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp">

                </com.google.android.material.textview.MaterialTextView>

                <TextView
                    android:id="@+id/wind"
                    android:layout_width="match_parent"
                    android:layout_height="103dp"
                    android:layout_marginVertical="40dp">

                </TextView>

            </androidx.cardview.widget.CardView>
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>